# FlagTree

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_cn.md  MAINTAINERS.md  README.md  README_cn.md  setup.py
.github/: CODEOWNERS  new-prs-labeler.yml
.github/actions/check-backend-changed/: action.yml
.github/actions/code-format-check/: action.yml
.github/actions/smart-checkout/: action.yml
.github/workflows/: aipu3.3-delivery.yml  ascend3.2-delivery.yml  ascend3.5-delivery.yml  build-rpm.yml  code-format-check.yml  enflame3.5-gcu400-delivery.yml  enflame3.6-gcu300-build-and-test.yml  enflame3.6-gcu400-build-and-test.yml  enflame3.6-gcu400-delivery.yml  flagcicd-hopper-build-and-test.yml  flagcicd-nv3.6-build-and-test.yml  hcu-build-and-test.yml  hcu3.1-delivery.yml  hcu3.6-build-and-test.yml  hcu3.6-delivery.yml  hopper-build-and-test.yml  iluvatar3.1-delivery.yml  iluvatar3.6-build-and-test.yml  iluvatar3.6-delivery.yml  metax3.0-delivery.yml  metax3.6-build-and-test.yml  metax3.6-delivery.yml  mthreads3.1-delivery.yml  mthreads3.2-delivery.yml  mthreads3.6-build-and-test.yml  mthreads3.6-delivery.yml  new-prs.yml  nv3.3-delivery.yml  nv3.5-delivery.yml  nv3.6-build-and-test.yml  nv3.6-delivery.yml  rpu3.6-build-and-test.yml  sunrise-build-and-test.yml  sunrise-delivery.yml  thrive3.6-build-and-test.yml  thrive3.6-delivery.yml  tileir-delivery.yml  tileir3.6-build-and-test.yml  tileir3.6-delivery.yml  tsingmicro3.3-delivery.yml  (+3 more)
documents/: install_ascend.md  install_ascend_cn.md  install_cn.md  install_cpu.md  install_cpu_cn.md  install_en.md  install_enflame.md  install_enflame_cn.md  install_hcu.md  install_hcu_cn.md  install_iluvatar.md  install_iluvatar_cn.md  install_metax.md  install_metax_cn.md  install_mthreads.md  install_mthreads_cn.md  install_rpu.md  install_rpu_cn.md  install_sunrise.md  install_sunrise_cn.md  install_tileir.md  install_tileir_cn.md  install_tsingmicro.md  install_tsingmicro_cn.md  install_xpu.md  install_xpu_cn.md
documents/decoupling/: FlagTree_Backend_Specialization_Cpp.md  FlagTree_Backend_Specialization_Python.md
include/triton/Conversion/TritonGPUToLLVM/: PatternTritonGPUOpToLLVM.h
include/triton/Dialect/Triton/IR/: Dialect.h  TritonOps.td
include/triton/Dialect/TritonGPU/IR/: CMakeLists.txt  TritonGPUOps.td
include/triton/Dialect/TritonGPU/Transforms/: Passes.td
include/triton/Dialect/TritonNvidiaGPU/IR/: TritonNvidiaGPUOps.td
lib/Analysis/: Allocation.cpp
lib/Conversion/TritonGPUToLLVM/: CMakeLists.txt  ElementwiseOpToLLVM.cpp  MyReduceSumOpToLLVM.cpp
lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  TritonGPUConversion.cpp  TritonToTritonGPUPass.cpp
lib/Dialect/Triton/IR/: Ops.cpp
lib/Dialect/Triton/Transforms/: CMakeLists.txt  RewriteTensorPointer.cpp
lib/Dialect/TritonGPU/IR/: CMakeLists.txt  Dialect.cpp  LinearLayoutConversions.cpp
lib/Dialect/TritonGPU/Transforms/: CMakeLists.txt  OpStats.cpp  Prefetch.cpp  RemoveLayoutConversions.cpp  Utility.cpp
lib/Dialect/TritonGPU/Transforms/Pipeliner/: SoftwarePipeliner.cpp  TleWGMMAAnalysis.h  TleWGMMAUserPromisePipeline.cpp  WGMMAPipeline.cpp
packaging/debian/build-helpers/: Dockerfile.deb
packaging/rpm/helpers/: Dockerfile.rpm  build-flagtree-rpm.sh
packaging/rpm/specs/: flagtree.spec
python/setup_tools/: setup_helper.py
python/setup_tools/utils/: __init__.py  default.py  hcu.py  iluvatar.py  metax.py  sunrise.py  tools.py  xpu.py
python/src/: ir.cc  main.cc  passes.cc
python/test/tle/integration/: test_tle_tma_copy.py  test_tle_ws_tma_gemm.py
python/test/tle/unit/: test_tle.py  test_tle_distributed_d2d.py  test_tle_distributed_d2d.sh  test_tle_get_local_pe.py  test_tle_get_local_pe.sh  test_tle_gpu_local_ptr.py  test_tle_raw_cache_key.py  test_tle_wgmma_pipeline_routing.py
python/test/unit/runtime/: test_launch.py
python/triton/: _filecheck.py  knobs.py
python/triton/backends/: __init__.py  compiler.py
python/triton/compiler/: code_generator.py  compiler.py  hint_manager.py
python/triton/experimental/gluon/: __init__.py
python/triton/experimental/tle/language/: __init__.py  communication.py  distributed.py
python/triton/experimental/tle/language/gpu/: __init__.py  core.py  types.py
python/triton/experimental/tle/language/gpu/iluvatar/: copy.py
python/triton/experimental/tle/raw/: cache_key.py  runtime.py
python/triton/language/: __init__.py  core.py  math.py  semantic.py
python/triton/runtime/: adjust_kernel_param.py  driver.py  jit.py
python/tutorials/tileir/: 01-load-view-token-ordering.py  02-mixed-kernel-routing.py  03-triton-tileir-benchmarks.py  README.md
python/tutorials/tileir/tilegym/: __init__.py  autotune.py  backend.py  logger.py
python/tutorials/tileir/tilegym/ops/triton/: attention.py  bmm.py  linear_bias_activation.py  matmul.py  matmul_perf_model.py  mla.py  mla_decoding.py  rope.py
python/tutorials/tileir/tilegym/ops/triton/activation/: gelu.py  relu.py  silu.py  tanh.py  utils.py
python/tutorials/tle/deepseek_v32/: 01-topk_selector.py
python/tutorials/tle/raw/mlir/: 04-hello-world.py
reports/v0.2.0/: release_notes_v0.2.0_cn.md  report_tests.md
reports/v0.3.0/: release_notes_v0.3.0_cn.md  report_tests.md
reports/v0.4.0/: release_notes_v0.4.0.md  release_notes_v0.4.0_cn.md  test_report_v0.4.0.md
reports/v0.5.0/: release_notes_v0.5.0.md  release_notes_v0.5.0_cn.md
scripts/: build-flagcx-project.sh
test/Triton/: ops.mlir  test_my_relu.mlir
test/TritonGPU/: test_op_stats.mlir
